# VPN_project

./: '  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  client-config-1.json  client-config-2.json  client-config.json  docker-compose.yaml  example.cpp  server-config.json
client/: .clang-format
client/include/: utils.h
client/src/: main.cpp  vpn_client.cpp
include/: authenticator.h  cli.h  configuration_parser.h  encryption.h  epoll_manager.h  handshake_manager.h  message_type.h  session.h  session_manager.h  tun_device.h  udp_socket.h  util.h  vpn_client.h  vpn_server.h  vpn_tunnel.h
server/include/: cli.h  encryption.h  vpn_server.h
server/src/: vpn_server.cpp
src/: authenticator.cpp  cli.cpp  configuration_parser.cpp  encryption.cpp  epoll_manager.cpp  main.cpp  session.cpp  session_manager.cpp  tun_device.cpp  udp_socket.cpp  util.cpp  vpn_client.cpp  vpn_server.cpp  vpn_tunnel.cpp
tests/: vpn
